# cargo-near-new-project-template

./: Cargo.toml  contract.wasm
