[package]
name = "cargo-near-new-project-name"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
# repository = "https://github.com/dj8yfo/sample_no_workspace/commit/021c319f33a959e7b8d007b062ffa2d51080ba4a"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = "5.0.0"

[package.metadata.near.reproducible_build]
image = "docker.io/sourcescan/cargo-near:0.6.0-near"
image_digest = "sha256:e5a0eaa0abdedd002c74cdb2eefd7ee7ffd5bc72274a756714a13e8ffc635dcd"
source_code_git_url="https://github.com/Canvinus/cargo-near-new-project-template"
container_build_command = "cargo near build --no-abi"


[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
